add: created block header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Yarmantovich Liza">
+    <title>Figma</title>
+    <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
-    
+    <header class="header block">
+        <div class="header__menu block__content">
+            <div class="logo">
+                <div class="logo__image">
+                    <img src="image/logo.svg" alt="logo">
+                </div>
+                <div class="logo__content">
+                    <span class="logo__title">Foundation</span>
+                    <span class="logo__text">Startup landing template</span>
+                </div>
+            </div>
+            
+            <div class="header__navigation">
+                <button class="header__hamburger"><label for="header__hamburger"></label></button>
+                <input type="checkbox" id="header__hamburger">
+                <ul class="header__list">
+                    <li class="header__item"><a class="header__link" href="#">Home</a></li>
+                    <li class="header__item"><a class="header__link" href="#">Stories</a></li>
+                    <li class="header__item"><a class="header__link"href="#">Library</a></li>
+                <ul>
+            </div>
+            <div>
+                <button class="header__button">
+                    Get Started
+                </button>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
