add: created promo block

--- a/index.html
+++ b/index.html
@@ -37,5 +37,27 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="promo block">
+            <div class="block__content promo_content">
+                <div class="promo__header">
+                    A bill that’s fair and flexible
+                </div>
+                <div class="promo__description">
+                    Create live segments and target the right people for messages based on their behaviors.
+                </div>
+                <img class="promo__background" src="image/promoBackground.jpg" alt="PromoImages">
+                <div class="promo__button">
+                    <button class="button">
+                    Get Started
+                    </button>
+                    <button class="button button-white ">
+                        Learn More
+                    </button>
+                </div>
+            </div> 
+        </div>
+    </main>>
 </body>
 </html>
