add: created benefits block

--- a/index.html
+++ b/index.html
@@ -58,6 +58,31 @@
                 </div>
             </div> 
         </div>
+        <div class="benefits block">
+            <div class="block__content">
+                <div class="benefits__box">
+                    <img src="image/benefits1.svg" alt="Learn More">
+                    <span class="benefits__text">
+                        Software development tool used by teams.
+                    </span>
+                    <a class="benefits__title" href="#">Learn More</a>
+                </div>
+                <div class="benefits__box">
+                    <img src="image/benefits2.svg" alt="See Features">
+                    <span class="benefits__text">
+                        Collaborate on code and manage your Git repositories.
+                    </span>
+                    <a class="benefits__title" href="#">See Features</a>
+                </div>
+                <div class="benefits__box">
+                    <img src="image/benefits3.svg" alt="Open a Ticket">
+                    <span class="benefits__text">
+                        Organize your work in one place.
+                    </span>
+                    <a class="benefits__title" href="#">Open a Ticket</a>
+                </div>    
+            </div>                
+        </div>
     </main>>
 </body>
 </html>
