add: created  audience and attraction block

--- a/index.html
+++ b/index.html
@@ -83,6 +83,50 @@
                 </div>    
             </div>                
         </div>
+        <div class="attraction block">
+            <div class="block__content">
+                <div class="attraction__block">
+                    <div class="attraction__title">
+                        Engage Visitors
+                    </div>
+                    <div class="attraction__header">
+                        Understand your audience
+                    </div>
+                    <div class="attraction__description">
+                        Early stage company? Eligible applicants get all of our products for just $49 a month.
+                    </div>
+               </div>
+            </div>  
+        </div>
+
+        <div class="audience block">
+            <div class="block__content">
+                <div class="audience__box">
+                    <img class="audience__image" src="image/developers.svg" alt="Developers">
+                    <span class="audience__text">
+                        Developers
+                    </span>
+                </div>
+                <div class="audience__box">
+                    <img class="audience__image" src="image/intertainment.svg" alt="Intertainment">
+                    <span class="audience__text">
+                        Intertainment
+                    </span>
+                </div>
+                <div class="audience__box">
+                    <img class="audience__image" src="image/athletes.svg" alt="Athletes">
+                    <span class="audience__text">
+                        Athletes
+                    </span>
+                </div>
+                <div class="audience__box">
+                    <img class="audience__image" src="image/creators.svg" alt="Creators">
+                    <span class="audience__text">
+                        Creators
+                    </span>
+                </div>
+            </div>
+        </div>
     </main>>
 </body>
 </html>
