add: created communication and feedback block

--- a/index.html
+++ b/index.html
@@ -127,6 +127,47 @@
                 </div>
             </div>
         </div>
-    </main>>
+        <div class="communication block">
+            <div class="block__content">
+                <div class="communication__box">
+                    <div class="communication__caption">
+                        Communicate Better
+                    </div>
+                    <div class="communication__title">
+                        Millions of Wi-Fi hotspots
+                    </div>
+                    <div class="communication__text">
+                        Three products that can be used independently or combined together for your company’s needs.
+                    </div>
+                    <div class="communication__button">
+                        <button class="button">
+                            Get Started
+                        </button>
+                    </div>
+                </div>
+                <img class="communication__image" src="image/benefits4.svg" alt="Features">
+            </div>
+        </div>
+
+        <div class="feedback block">
+            <div class="block__content">
+                <img class="feedback__image" src="image/feedback.svg" alt="Start your free trial.">
+                <div class="feedback__box">
+                    <span class="feedback__title">
+                        Start your free trial.
+                    </span>
+                    <span class="feedback__description">
+                        Get notified about company updates, news and blog posts. We hate spam.
+                    </span>
+                    <form class="feedback__form">
+                        <input placeholder='Enter your email' class="feedback__input" required type="email" name="email"/> 
+                        <button class="button">
+                            Get Started
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
