add: created footer

--- a/index.html
+++ b/index.html
@@ -168,6 +168,75 @@
                 </div>
             </div>
         </div>
+        <footer class="footer block">
+            <div class="block__content">
+                <div>
+                    <div class="footer__row">
+                        <div class="footer__column">
+                            <div class="logo">
+                                <div class="logo__image">
+                                    <img src="image/logo2.svg" alt="logo">
+                                </div>
+                                <div class="logo__content">
+                                    <span class="logo__title">Foundation</span>
+                                    <span class="logo__text">Startup landing template</span>
+                                </div>
+                            </div>
+                            <div class="footer__description">
+                                Foundation is a website template for startups and small teams. It helps to build a website in no time.
+                            </div>
+                            <div class="footer__icon">
+                                <a href="https://www.apple.com" target="_blank">
+                                    <img src="image/appStore.svg">
+                                </a>
+                                <a href="https://play.google.com" target="_blank">
+                                    <img class="footer__image" src="image/appGoodle.svg">
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="footer__column">
+                            <div class="footer__title">
+                                Product
+                            </div>
+                            <ul>
+                                <li class="footer__item">Acquire Users</li>
+                                <li class="footer__item">Content Marketing</li>
+                                <li class="footer__item">Website Templates</li>
+                                <li class="footer__item">Customer Management</li>
+                                <li class="footer__item">Virtual Inbox</li>
+                            </ul> 
+                        </div>
+
+                        <div class="footer__column">
+                            <div class="footer__title">
+                                Company
+                            </div>
+                            <ul>
+                                <li class="footer__item">About Foundation</li>
+                                <li class="footer__item">Brand Guidelines</li>
+                                <li class="footer__item">Press Kit</li>
+                                <li class="footer__item">Support</li>
+                            </ul>
+                        </div>
+                    </div>    
+                    <div class="footer__bottom">
+                        <a href="#" class="footer__text">Terms</a>
+                        <a href="#" class="footer__text">Privacy</a>
+                        <a href="#" class="footer__text">License</a>
+                        <a class="footer__messengers footer__messengers-first" href="https://twitter.com" target="_blank">
+                            <img src="image/icon-twitter.svg" alt="Icon">
+                        </a>
+                        <a class="footer__messengers" href="https://www.facebook.com" target="_blank">
+                            <img src="image/icon-fb.svg" alt="Icon">
+                        </a>
+                        <a class="footer__messengers" href="https://ru.linkedin.com" target="_blank">
+                            <img src="image/icon-linkD.svg" alt="Icon">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
