--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Yarmantovich Liza">
     <title>Figma</title>
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="icon" type="image/x-icon" href="/image/favicon.ico">
 </head>
 <body>
     <header class="header block">
